--- a/Personal Web/newProtfolio.html
+++ b/Personal Web/newProtfolio.html
@@ -86,9 +86,9 @@
     <section class="container" id="portfolio">
         <h2 class="section-title">My Portfolio</h2>
         <div class="portfolio-tabs">
-            <button class="tab-btn active" data-tab="web">Web Projects</button>
-            <button class="tab-btn" data-tab="matrimonial">Matrimonial Biodata</button>
-            <button class="tab-btn" data-tab="calculator">Calculator</button>
+            <a href="#web" class="btn" style="margin-top: 20px;">Web Projects</a>
+            <a href="#matrimonial" class="btn" style="margin-top: 20px;">Matrimonial Biodata</a>
+            <a href="#calculator" class="btn" style="margin-top: 20px;">Calculator</a>
         </div>
         
         <!-- Web Projects Tab -->
@@ -101,7 +101,7 @@
                     <div class="portfolio-info">
                         <h3>Gorur Hat Website</h3>
                         <p>A fully responsive e-hat platform with product filtering, cart functionality, and secure checkout.</p>
-                        <a href="#" class="btn" style="padding: 8px 15px; font-size: 0.9rem;">View Project</a>
+                        <a href="https://amir160s.github.io/-/" class="btn" target="_blank">View Project</a>
                     </div>
                 </div>
                 <div class="portfolio-item">
@@ -111,17 +111,27 @@
                     <div class="portfolio-info">
                         <h3>Portfolio Template</h3>
                         <p>A clean and modern portfolio template for creative professionals, with animated elements.</p>
-                        <a href="https://amir-portfolio-wdia.vercel.app/" class="btn" style="padding: 8px 15px; font-size: 0.9rem;">View Project</a>
+                        <a href="https://amir-portfolio-wdia.vercel.app/" class="btn" target="_blank">View Project</a>
                     </div>
                 </div>
                 <div class="portfolio-item">
                     <div class="portfolio-image">
-                        <img src="https://via.placeholder.com/600x400" alt="Project 3">
+                        <img src="/Images/bibaho.PNG" alt="Project 3">
                     </div>
                     <div class="portfolio-info">
-                        <h3>Task Management App</h3>
-                        <p>A productivity application for managing tasks with drag-and-drop functionality and team collaboration.</p>
-                        <a href="#" class="btn" style="padding: 8px 15px; font-size: 0.9rem;">View Project</a>
+                        <h3>Marriage Biodata Web</h3>
+                        <p>A responsive Marriage Biodata website for creating, customizing, and sharing personal biodata profiles with photo uploads, printable templates, and easy data input.</p>
+                        <a href="https://bibaho.vercel.app/" class="btn" target="_blank">View Project</a>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="portfolio-image">
+                        <img src="/Images/sleepy.png" alt="Project 3">
+                    </div>
+                    <div class="portfolio-info">
+                        <h3>Sleepy Web App</h3>
+                        <p>A minimalist Sleepy Web App designed to help users track sleep patterns, set bedtime reminders, and improve sleep quality through a calming interface and personalized insights.</p>
+                        <a href="https://v0-sleep-tracking-features.vercel.app/" class="btn" target="_blank">View Project</a>
                     </div>
                 </div>
             </div>
