--- a/Personal Web/index.html
+++ b/Personal Web/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amir Hamza | Personal Website</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="mystyle.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" sizes="32x32" href="/Images/favicon.jpg" type="image/jpg">
 </head>
 <body>
